--- a/vignettes/stoppstartR_vignette.Rmd
+++ b/vignettes/stoppstartR_vignette.Rmd
@@ -21,42 +21,74 @@ knitr::opts_chunk$set(
 )
 ```
 
-
-
 ## Installing stoppstartR
 
 ```{r setup, eval=FALSE}
-# Install the remotes package & use its function, install_github, to install the stoppstartR package.
+# Install the remotes package & use its function, install_github, to install the
+# stoppstartR package.
 install.packages("remotes")
 remotes::install_github("https://github.com/IarlaithDoherty/stoppstartR")
 
-# Given patient data in the form of a data.frame called patient_data_frame, apply all of the
-# implemented STOPP/START criteria using the all_stoppstart function from stoppstartR.
+# Given patient data in the form of a data.frame called patient_data_frame,
+# apply all of the implemented STOPP/START criteria using the all_stoppstart
+# function from stoppstartR.
 stoppstartR::all_stoppstart(patient_data_frame)
-
 ```
 
 ## Data Set Layout
 
-To apply the STOPP/START criteria implemented in `stoppstartR`, the patient data must be in the form of a `data.frame` object.
+To apply the STOPP/START criteria implemented in `stoppstartR`, the
+patient data must be in the form of a `data.frame` object.
 
-The main function in the `stoppstartR` package is `all_stoppstart`. The `all_stoppstart` function allows the user to apply any subset of the STOPP/START criteria implemented in the `stoppstartR` package.
+The main function in the `stoppstartR` package is `all_stoppstart`. The
+`all_stoppstart` function allows the user to apply any subset of the
+STOPP/START criteria implemented in the `stoppstartR` package.
 
 ### Comorbidity columns and the `comorb_string` argument
 
-The `stoppstartR` package is designed to be applied to a `data.frame` object with one row per patient, in which the patient comorbidities are listed across a set of columns. Each of an individual patient's comorbidities are expected to be listed in a separate column. Each column may contain a variety of comorbidities across different patients. Each entry in these columns is expected to contain a single comorbidity. This entry must contain the ICD10 code for that comorbidity, but it may also contain other characters / text, for example the name of the comorbidity.
+The `stoppstartR` package is designed to be applied to a `data.frame`
+object with one row per patient, in which the patient comorbidities are
+listed across a set of columns. Each of an individual patient's
+comorbidities are expected to be listed in a separate column. Each
+column may contain a variety of comorbidities across different patients.
+Each entry in these columns is expected to contain a single comorbidity.
+This entry must contain the ICD10 code for that comorbidity, but it may
+also contain other characters / text, for example the name of the
+comorbidity.
 
-An example of a suitable entry would be `"Chronic atrial fibrillation - I48.2"`. The `stoppstartR` functions will recognise that this entry contains the character string `"I48.2"` and will ignore the rest of the text.
+An example of a suitable entry would be
+`"Chronic atrial fibrillation - I48.2"`. The `stoppstartR` functions
+will recognise that this entry contains the character string `"I48.2"`
+and will ignore the rest of the text.
 
-The `all_stoppstart` function and all of the single criterion functions, such as `start_a1`, have a `comorb_string` argument. This is used by the functions to identify which columns of the data set contain the patient comorbidities. They do so by selecting every column whose name contains the character string, `comorb_string`.
+The `all_stoppstart` function and all of the single criterion functions,
+such as `start_a1`, have a `comorb_string` argument. This is used by the
+functions to identify which columns of the data set contain the patient
+comorbidities. They do so by selecting every column whose name contains
+the character string, `comorb_string`.
 
-For example, if the patient comorbidity columns are named `"Comorbidity_1"`, `"Comorbidity_2"`, etc., then the value of the `comorb_string` argument should be `"Comorbidity_"`. This is the default argument value but any other character string, e.g. `"comorbidities_"`, can be specified by setting `comorb_string = "comorbidities"` in the function call.
+For example, if the patient comorbidity columns are named
+`"Comorbidity_1"`, `"Comorbidity_2"`, etc., then the value of the
+`comorb_string` argument should be `"Comorbidity_"`. This is the default
+argument value but any other character string, e.g. `"comorbidities_"`,
+can be specified by setting `comorb_string = "comorbidities"` in the
+function call.
 
-As well as being contained in the column name of every patient comorbidity column, the character string, `comorb_string`, should also not be contained in the column name of any other columns.
+As well as being contained in the column name of every patient
+comorbidity column, the character string, `comorb_string`, should also
+not be contained in the column name of any other columns.
 
 ### Drug columns and the `drug_string` argument
 
-Similarly to patient comorbidities, patient drugs should be listed across a set of columns whose names share a common character string. This character string is specified by the `drug_string` argument which acts in the same way as the `comorb_string` argument. Its default value is `"Drug_"`, which would suit a set of columns named `"Drug_1"`, `"Drug_2"`, etc. For a given patient / row, each drug should be listed in a separate column. These entries should contain the ATC code, although as with comorbidities, they may also contain other text, for example, `"warfarin - B01AA03"`.
+Similarly to patient comorbidities, patient drugs should be listed
+across a set of columns whose names share a common character string.
+This character string is specified by the `drug_string` argument which
+acts in the same way as the `comorb_string` argument. Its default value
+is `"Drug_"`, which would suit a set of columns named `"Drug_1"`,
+`"Drug_2"`, etc. For a given patient / row, each drug should be listed
+in a separate column. These entries should contain the ATC code,
+although as with comorbidities, they may also contain other text, for
+example, `"warfarin - B01AA03"`.
 
 ### Other columns
 
@@ -88,4 +120,5 @@ The `all_stoppstart` function also takes the following arguments:
 
 -   `ppi_column`
 
-These arguments require the exact full name of their corresponding columns.
+These arguments require the exact full name of their corresponding
+columns.
